--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Jonathan Peterson</h1>
         <p><em>Senior Engineer <strong>Design</strong></em></p>
         <p>I have a BS Sc. Mechanical-Aerospace Engineering
-          from <a href="https://www.usu.edu/">Utah State University</a>, graduating in 2010.
+          from <a href="https://www.usu.edu/">Utah State University</a>, graduated in 2010.
           I have worked at Caterpillar Inc for 10 years.</p>
       </td>
     </tr>
