--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <ul>
-    <li>email: jonathanmpeterson@yahoo.com</li>
+    <li>email: jonathanmpeterson955@yahoo.com</li>
   </ul>
   <hr>
   <form action="mailto:jonathanmpeterson955@yahoo.com" method="post" enctype="text/plain">
